update name and description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "journal",
+  "name": "department sections scheduler",
   "version": "1.0.0",
-  "description": "application to record examples of applying the various Habits of Mind",
+  "description": "application to assist department chairs in scheduling courses given a variety of constraints and criteria",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
