--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-promise": "^6.1.1"
   },
   "dependencies": {
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
