--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "fs": "^0.0.1-security",
     "google-auth-library": "^9.4.1",
     "mongoose": "^7.4.0",
     "morgan": "^1.10.0",
