--- a/Sprint1/Config.json
+++ b/Sprint1/Config.json
@@ -1,13 +1,6 @@
 {
   "numPeriods": 8,
   "weights": {
-    "0": 0.1,
-    "1": 0.1,
-    "2": 0.1,
-    "3": 0.1,
-    "4": 0.1,
-    "5": 0.1,
-    "6": 0.1,
-    "7": 0.1
+    "Lunch": ".2"
   }
 }
