Update Config.json and schedulegenalg.js

--- a/Sprint1/Config.json
+++ b/Sprint1/Config.json
@@ -1,6 +1,9 @@
 {
   "numPeriods": 8,
   "weights": {
-    "Lunch": ".2"
+    "lunchCount": ".2",
+    "classroomStay": ".2",
+    "longestConcurence": ".2",
+    "teacherPreference": ".2"
   }
 }
