--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-promise": "^6.1.1"
   },
   "dependencies": {
+    "@picocss/pico": "^2.0.6",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
