--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@picocss/pico": "^2.0.6",
+    "body-parser": "^1.20.3",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
